archive/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.com
    http:
      paths:
      - path: /initiate
        pathType: Exact
        backend:
          service:
            name: vanilla-service
            port:
              number: 4000
